dashboards-ui/dashboardsui-web/public_html/css/dashboards-home-alta.css
/* 
    Document   : override
    Created on : <date>
    Author     : wenjzhu
    Description:
        This is where any of your application specific styles should be included
*/

.dbs-lock-icon-24:before{content:url("images/qual_lock_16_full.png");}

.dbs-search-icon:before {content:url("images/func_search_16_ena.png");}

.dbs-clear-icon:before {content:url("images/clearEntry_ena.png");}

.icon-delete-ena-16:before{content:url("images/func_delete_16_ena.png");}

.dbs-welcome-centeredImage{
    text-align:center;
    margin-top:0px;
    margin-bottom:0px;
    padding:0px;
    vertical-align: middle;
}

.dbs-welcome-content{
    //padding-left: 4px;
    //padding-right: 4px; 
    margin-left: 5px;
    margin-right: 5px; 
    height: 55px;
    text-align: center;
    vertical-align: middle;
    font-size: 14px;
    border-radius: 8px;
    background-color: #e8f2fb;
}

.main-content-area {
    margin: 0px;
    padding-right: 10px;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.dbs-tab-container {
    background-color: transparent;
    background: transparent;
    margin: 0px;
    padding: 0px;
    min-height: 500px;
    
}

.dbs-search-box { 
    border:1px; 
    border-radius: 8px;
    border-style: solid;
    background-color: #fcfdfe;
    border: 1px solid #d6dfe6;   
    white-space: nowrap;
    display: -ms-inline-flexbox;
    display: -webkit-inline-flex;
    display: inline-flex;
    height: 2.286rem;
    padding: 0px;
    min-width: 8em; 
    max-width: 650px;
    margin-right: 5px;
} 

.dbs-search-box-input { 
    -webkit-flex: 1;  /* Safari 6.1+ */
    -ms-flex: 1;  /* IE 10 */    
    flex: 1;
    border: 0px;
    border-radius: 8px;
    border-color: #fcfdfe;
    padding: 0px;
    margin: 0;
    max-width: 1024px;
    min-width: 50px
} 

.dbs-search-box-input input { 
    border: 0px;
    border-color: #fcfdfe;
    border-radius: 8px;
    //height: 2.286rem;
    padding: 0px;
    margin: 0;
    max-width: 1024px;
    min-width: 50px
} 

.dbs-summaries-container {
    //background: #ffffff;
}

.dbs-summary-container {
    width:  320px;
    height: 200px;
    display: inline-block;
    margin: 5px;
    padding-top: 0px;
    padding-bottom: 1px;
    padding-left: 2px;
    padding-right: 2px;
    vertical-align: top;
    background: #ffffff;
    border: 1px solid #d6dfe6;   
    border-color: #D6DFE6;   
    border-radius: 1px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.dbs-summary-container.active {
    /*border: solid thick;*/
    /*border-color: #85bbe7;*/ 
    border: solid thin;
    border-color: #0572ce;
    cursor: pointer;
}

.dbs-summary-header-container {
    height: 30px;
    position: relative;
    vertical-align: top;
    padding: 0px;
    margin: 0px;
}

.dbs-summary-header-title {
    //text-align: center;
    text-align: left;
    padding-left: 10px;
}

.dbs-summary-header-title h2 {
    font-size: 1rem;
    white-space: nowrap;
}

.dbs-summary-header-title.active {
    //text-align: left;
}

.dbs-summary-header-toolbar {
    position: absolute; 
    top: 0; 
    width: 100% ; 
    vertical-align: top;
    display: none;
}

.dbs-summary-header-toolbar.active {
    display: inline-block;
}

.dbs-summary-pages {
    position: relative;
    overflow: hidden;
    width: 100%;
    height: 130px;
}

.dbs-summary-page {
    display: none;//inline-block;  
    width: 100%;
    max-height: 120px;
    float: left;
}

.dbs-summary-page.active {
    display: inline-block;
}

.dbs-summary-page-scroll {
    overflow-y: scroll;
}

.dbs-summary-page-image {
   width: 100%;
   height: auto;
   text-align:center;
}

.dbs-summary-page-description {
   padding-left: 5px;
   padding-right: 5px;
   //font-weight: bold;
   color:gray;   
}

.dbs-summary-controlls {
    margin-top: 5px;
    text-align: center;
    min-height: 25px;
    height: 25px;
}

.dbs-summary-controlls .dbs-summary-controll {
    display: inline-block;
}

.dbs-summary-controlls .dbs-summary-controll span {
    display: block;
    width: 12px;
    height: 12px;
    margin: 5px 7px;
    opacity: 0.3;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    background: #869791;
}

.dbs-summary-controlls .dbs-summary-controll:hover span{
    opacity: 0.6;
}

.dbs-summary-controlls .dbs-summary-controll.active span{
    opacity: 1;
}

ul.dbs-summary-rows {
    list-style-type: none;
    padding: 0px;
    margin: 0px;
}

ul.dbs-summary-rows li {
    list-style-type: none;
    padding: 5px;
    //margin: 5px;
    border-radius: 1px;
    border-bottom: 1px #869791; // #d6dfe6; 
    border-bottom-style: dotted;
    font-weight: normal;
    color:gray;
}

.dbs-icon {
  display: inline-block;
  margin: 0;
  width: 16px;
  height: 16px;
  padding-right: 5px;
  padding-bottom: 3px;
  line-height: 0;
  overflow: hidden;
  direction: ltr;
  text-align: center;
  vertical-align: bottom;
  -moz-box-sizing: content-box;
  box-sizing: content-box; 
}

.oj-label-required:before{content:'*'}

#dtabhomettb #cbtn{
    margin-bottom: 4px; 
    background-image: none;
    //margin-left: 6px;
    text-shadow: none;

    color: #ffffff;
    font-weight: bold;
    background-color: #0572ce;
    background: linear-gradient(to bottom, #0470c9 0%, #0571cd 50%, #0479d8 100%);
    border: 1px solid #0476d3;
    border-radius: 2px;
    
    text-align: right;
     box-shadow:none;  
    
} 

#dtabhomettb #cbtn:hover{
    
    background-color: #3a9aea;
    border: 1px solid #3a9aea;  
    background-image: none;

}  

#ojDialogWrapper-cDsbDialog #createDialogFooter #createDsb{
    margin-bottom: 4px; 
    background-image: none;
    margin-left: 6px;
    text-shadow: none;

    color: #ffffff;
    font-weight: bold;
    background-color: #0572ce;
    background: linear-gradient(to bottom, #0470c9 0%, #0571cd 50%, #0479d8 100%);
    border: 1px solid #0476d3;
    border-radius: 2px;
    
    text-align: right;
     box-shadow:none;      
}

#ojDialogWrapper-cDsbDialog #createDialogFooter #createDsb:hover{
    background-color: #3a9aea;
    border: 1px solid #3a9aea;  
    background-image: none;
}

.oj-button.dbs-home-button {
    margin-bottom: 4px; 
    background-image: none;
    margin-left: 6px;
    text-shadow: none;

    color: #ffffff;
    font-weight: bold;
    background-color: #0572ce;
    background: linear-gradient(to bottom, #0470c9 0%, #0571cd 50%, #0479d8 100%);
    border: 1px solid #0476d3;
    border-radius: 2px;
    
    text-align: right;
     box-shadow:none;      
}

.oj-button.dbs-home-button:hover{
    background-color: #3a9aea;
    border: 1px solid #3a9aea;  
    background-image: none;
}

a:hover {
 cursor:pointer;
}

.busy, .busy *{
    cursor: progress !important;   
}

